[package]
name = "asteroids"
version = "0.1.0"
authors = ["mthom26 <mthom2626@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luminance = "0.37.1"
luminance-glutin = "0.6.1"
luminance-derive = "0.5.0"
image = "0.22.3"
